@@ -26,7 +26,7 @@
 
   <groupId>org.apache.linkis</groupId>
   <artifactId>linkis</artifactId>
-  <version>1.3.0</version>
+  <version>1.3.1</version>
   <packaging>pom</packaging>
   <name>Linkis Project Parent POM</name>
   <description>Linkis helps easily connect to various back-end computation/storage engines</description>
@@ -1238,6 +1238,11 @@
               </excludes>
 
               <removeUnusedImports/>
+
+              <licenseHeader>
+                <file>${maven.multiModuleProjectDirectory}/tool/license-header</file>
+                <delimiter>package</delimiter>
+              </licenseHeader>
             </java>
             <scala>
               <scalafmt>
@@ -1249,6 +1254,15 @@
               </licenseHeader>
             </scala>
           </configuration>
+          <executions>
+            <execution>
+              <id>spotless-apply</id>
+              <goals>
+                <goal>apply</goal>
+              </goals>
+              <phase>validate</phase>
+            </execution>
+          </executions>
         </plugin>
 
         <plugin>
@@ -1308,6 +1322,28 @@
       <properties>
         <rat.skip>false</rat.skip>
       </properties>
+    </profile>
+    <profile>
+      <id>jdk11-on</id>
+      <activation>
+        <jdk>[11,)</jdk>
+      </activation>
+      <properties>
+        <maven.compiler.release>8</maven.compiler.release>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-opens java.base/java.util=ALL-UNNAMED
+                --add-opens java.base/java.nio=ALL-UNNAMED
+                --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>release</id>
